opam-version: "1.2"
version: "0.1.0"
maintainer: "Andre Nathan <andrenth@gmail.com>"
authors: "Andre Nathan <andrenth@gmail.com>"
homepage: "https://github.com/andrenth/sequoia"
bug-reports: "https://github.com/andrenth/sequoia"
license: "MIT"
dev-repo: "https://github.com/andrenth/sequoia"
available: [ ocaml-version >= "4.04.0" ]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
build-test: [["dune" "runtest" "-p" name "-j" jobs]]
depends: [
  "dune" {build & >= "1.0"}
  "sequoia"
  "ppx_tools_versioned"
  "ocaml-migrate-parsetree"
]
