opam-version: "1.2"
version: "0.2.0"
maintainer: "Andre Nathan <andrenth@gmail.com>"
authors: "Andre Nathan <andrenth@gmail.com>"
homepage: "https://github.com/andrenth/sequoia"
bug-reports: "https://github.com/andrenth/sequoia"
license: "MIT"
dev-repo: "https://github.com/andrenth/sequoia"
available: [ ocaml-version >= "4.12.0" ]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
depends: [
  "dune" {build}
  "sequoia"
  "ppx_tools_versioned"
  "ocaml-migrate-parsetree"
]
